fixed spacing
git-svn-id: https://svn.apache.org/repos/asf/incubator/click/trunk/click@823441 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/webapp/assets/css/style.css
+++ b/examples/webapp/assets/css/style.css
@@ -242,6 +242,7 @@ a.tb_label {
 
 .image-link img.link {
     vertical-align: top;
+    padding-right: 2px;
 }
 
 .export-attached {
